--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
   },
   "dependencies": {
     "jquery": "^3.2.1",
-    "react": "^15.6.1",
+    "react": "^0.14.9",
     "react-dom": "^15.6.1",
-    "semantic-ui-react": "^0.73.0"
+    "semantic-ui-react": "^0.73.0",
+    "victory": "^0.22.2"
   },
   "scripts": {
     "start": "react-scripts start",
